<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_media">Медиатека</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_create">Новый плейлист</string>
    <string name="setting_theme">Темная тема</string>
    <string name="setting_share">Поделиться приложением</string>
    <string name="setting_support">Написать в поддержку</string>
    <string name="setting_terms">Пользовательское соглашение</string>
    <string name="android_developer">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="mailto">mailto:</string>
    <string name="EXTRA_EMAIL">vaszol@yandex.ru</string>
    <string name="EXTRA_SUBJECT">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="EXTRA_TEXT">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="message_fail">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="message_empty">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="search_history_btn">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="track_collection">Альбом</string>
    <string name="track_release_date">Год</string>
    <string name="track_Genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="favorite_title">Избранные треки</string>
    <string name="favorite_empty">Ваша медиатека пуста</string>
    <string name="playlist_title">Плейлисты</string>
    <string name="playlist_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="playlist_create">Новый плейлист</string>
    <string name="playlist_photo_picker">фото пикер</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create_btn">Создать</string>
    <string name="playlist_image_description">обложка плейлиста</string>
    <string name="playlist_created_snackbar">Плейлист %1$s создан</string>
    <string name="playlist_added">Добавлено в плейлист %1$s</string>
    <string name="playlist_already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="favorite_dialog_title">Завершить создание плейлиста?</string>
    <string name="favorite_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="favorite_dialog_negative">Отмена</string>
    <string name="favorite_dialog_positive">Завершить</string>
    <string name="bottom_sheet_title">Добавить в плейлист</string>
    <string name="playlist_info_track_img_description">обложка плейлиста</string>
    <string name="playlist_info_share_img_description">Поделиться</string>
    <string name="playlist_info_menu_img_description">Меню</string>
    <string name="playlist_info_delete_track_dialog_title">Хотите удалить трек?</string>
    <string name="playlist_info_delete_track_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="playlist_info_delete_track_dialog_negative">нет</string>
    <string name="playlist_info_delete_track_dialog_positive">да</string>
    <string name="playlist_Empty_text">В этом плейлисте нет ни одного трека</string>
    <string name="playlist_Empty_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <plurals name="track">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>
    <string name="playlist_info_total">%1$s · %2$s</string>
    <string name="playlist_info_delete_playlist_dialog_title">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlist_info_delete_playlist_dialog_negative">Нет</string>
    <string name="playlist_info_delete_playlist_dialog_positive">Да</string>
    <string name="playlist_edit_save">Сохранить</string>
    <string name="track_img_description">Иконка трека</string>
    <string name="separator">Разделитель точка</string>
    <string name="arrow">Индикатор стрелочка</string>
</resources>