<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/light_mode_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/menu_setting"
        app:titleTextColor="@color/toolbarTextMenu" />

    <LinearLayout style="@style/verticalLinearLayout">

        <FrameLayout style="@style/menuFrameLayout">

            <TextView
                style="@style/menuTextView"
                android:text="@string/setting_theme" />

            <Switch
                android:id="@+id/setting_theme_switch"
                style="@style/menuImageView"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </FrameLayout>

        <FrameLayout style="@style/menuFrameLayout">

            <TextView
                style="@style/menuTextView"
                android:text="@string/setting_share" />

            <ImageView
                android:id="@+id/setting_share_btn"
                style="@style/menuImageView"
                android:src="@drawable/share" />
        </FrameLayout>

        <FrameLayout style="@style/menuFrameLayout">

            <TextView
                style="@style/menuTextView"
                android:text="@string/setting_support" />

            <ImageView
                android:id="@+id/setting_support_btn"
                style="@style/menuImageView"
                android:src="@drawable/support" />
        </FrameLayout>

        <FrameLayout style="@style/menuFrameLayout">

            <TextView
                style="@style/menuTextView"
                android:text="@string/setting_terms" />

            <ImageView
                android:id="@+id/setting_terms_btn"
                style="@style/menuImageView"
                android:src="@drawable/terms" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
