<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/light_mode_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/menu_create"
        app:titleTextColor="@color/toolbarTextMenu"
        tools:ignore="MissingConstraints" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout style="@style/verticalLinearLayout">

            <ImageButton
                android:id="@+id/photo_picker"
                android:layout_width="match_parent"
                android:layout_height="312dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="24dp"
                android:background="@drawable/ic_photo_picker"
                android:contentDescription="@string/playlist_photo_picker" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/playlist_name"
                android:imeOptions="actionNext"
                android:textColorHint="@color/trackTextPrime"
                app:boxStrokeColor="@color/box_stroke_color"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/messageText"
                    android:textCursorDrawable="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="170dp"
                android:hint="@string/playlist_description"
                android:imeOptions="actionNext"
                android:textColorHint="@color/trackTextPrime"
                app:boxStrokeColor="@color/box_stroke_color"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/messageText"
                    android:textCursorDrawable="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="0"
        android:background="@drawable/create_button"
        android:enabled="false"
        android:shadowColor="#AEAFB4"
        android:text="@string/playlist_create_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</LinearLayout>