<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/light_mode_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_12">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_8"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/menu_search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            app:cornerRadius="@dimen/size_16"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/size_8"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_8"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/menu_media"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            app:cornerRadius="@dimen/size_16"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/size_8"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_8"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/menu_setting"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            app:cornerRadius="@dimen/size_16"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/size_8"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>
