<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/light_mode_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/menu_search"
        app:titleTextColor="@color/toolbarTextMenu" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/verticalLinearLayout">

            <LinearLayout
                android:id="@+id/container"
                style="@style/verticalLinearLayoutSearch">

                <ImageView
                    android:id="@+id/searchIcon"
                    style="@style/SearchImageView"
                    android:layout_marginStart="@dimen/size_12"
                    android:background="@drawable/search" />

                <EditText
                    android:id="@+id/inputEditText"
                    style="@style/SearchEditText"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/clearIcon"
                    style="@style/SearchImageView"
                    android:layout_marginEnd="@dimen/size_12"
                    android:background="@drawable/clear"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/search_history"
                android:layout_width="360dp"
                android:layout_height="59dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/search_history"
                android:textColor="@color/messageText"
                android:textSize="19sp"
                android:visibility="invisible"
                tools:ignore="Suspicious0dp" />

            <ProgressBar
                android:id="@+id/search_pgb"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="140dp"
                android:indeterminateTint="@color/blue"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:ignore="MissingConstraints"
                tools:itemCount="7"
                tools:listitem="@layout/track_item" />

            <Button
                android:id="@+id/search_history_btn"
                android:layout_width="148dp"
                android:layout_height="36dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_message_btn"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/search_history_btn"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:theme="@style/message_btn_theme"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/message_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_message_empty" />

                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center"
                    android:maxLines="4"
                    android:textColor="@color/messageText"
                    android:textSize="19sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/message_btn"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_message_btn"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:theme="@style/message_btn_theme"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>