<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/playlist_info_bg">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="UnknownId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.media.fragment.PlayerFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/size_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/size_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

            <ImageView
                android:id="@+id/track_img"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/playlist_info_track_img_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_music_full"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/guideline">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="@color/playlist_info_text"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Best songs 2021" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="@color/playlist_info_text"
                    android:textSize="18sp"
                    tools:text="2022" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="@color/playlist_info_text"
                    android:textSize="18sp"
                    tools:text="300 минут · 98 треков" />

                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total">

                    <ImageButton
                        android:id="@+id/btnShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/playlist_info_share_img_description"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/share"
                        app:tint="@color/playlist_info_text" />

                    <ImageButton
                        android:id="@+id/btnMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/playlist_info_menu_img_description"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/ic_menu"
                        app:tint="@color/playlist_info_text" />
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/info_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_bottom_sheet"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="266dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_grey_round" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_bottom_sheet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_menu"
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_bottom_sheet"
        android:clickable="true"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="383dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_grey_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/track_img_menu"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/playlist_info_track_img_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_music" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/ys_display_regular"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/media_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Best songs 2021" />

                <TextView
                    android:id="@+id/count_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/media_text"
                    android:textSize="11sp"
                    tools:text="98 треков" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_share_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:textColor="@color/media_text"
            android:textSize="16sp"
            tools:text="@string/playlist_menu_share" />

        <TextView
            android:id="@+id/btn_edit_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:textColor="@color/media_text"
            android:textSize="16sp"
            tools:text="@string/playlist_menu_edit" />

        <TextView
            android:id="@+id/btn_delete_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:textColor="@color/media_text"
            android:textSize="16sp"
            tools:text="@string/playlist_menu_delete" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>